--- a/task/pipeline/txt2imgInference.yml
+++ b/task/pipeline/txt2imgInference.yml
@@ -6,29 +6,35 @@
     base_model: '../model/base/majicMIX.safetensors' # model parameter
     loras: # lora : weight
       - lora:
-        name: '../model/lora/light_and_shadow.safetensors'
-        weight: 0
-      - lora:
-        name: '../model/lora/3d_rendering.safetensors'
-        weight: 0
-      - lora:
-        name: '../model/lora/lolita.safetensors'
-        weight: 0.5
-      - lora:
         name: '/home/xiaoyuz/diffusers/task/pipeline/output/lora/lora.bin'
-        weight: 0.8
-    sampler: 'ddim'
+        weight: 1
+    sampler: 'dpm++ 2m' # ddim, dpm, dpm++ 2m karras, dpm++ 2m
     
   # inference parameter
-  prompt: 'lolita girl and yellow pokemon:5, big city, top quality, high resolution, masterpiece, oil painting'
-  negative_prompt: 'ng_deepnegative_v1_75t,badhandv4, (worst quality:1), (low quality:2), (normal quality:2), lowres,watermark, monochrome'
   step: 30
   width: 512
   height: 768
-  seed: 32100152
+  seed: 321001525
   cfg: 7.0
   num_images_per_prompt: 10
 
+  # input parameter
+  # accept a single input (prompt/negative_prompt/image) or a dataset (name/image_column/prompt_column/negative_prompt_column
+  input:
+    prompt: 'fengyizhou, fengyizhou, fengyizhou (masterpiece, best quality)'
+    negative_prompt: 'nsfw, low quality, low resolution, bad eyes, bad face. blur' # toot mouth, protruding mouth, chubby face'
+    image: './output/0-1 copy.png' # if ignore, will use prompt to generate image
+    strength: 0.7
+    # dataset:
+    #   name: './blip'
+    #   image_column: 'image'
+    #   prompt_column: 'prompt'
+    #   negative_prompt_column: 'negative_prompt'
+
   # output folder
-  output_folder: 'output'
-  
+  output:
+    output_folder: 'output'
+    output_as_dataset: True # if True, will output a dataset with image and text
+    output_image_column: 'new_image' # must be provided if output_as_dataset is True
+    output_as_image_folder: True # if True, will output images to output_folder
+    
