--- a/task/pipeline/txt2imgLoraTraining.yml
+++ b/task/pipeline/txt2imgLoraTraining.yml
@@ -7,20 +7,20 @@
   # dataset
   # can be a dataset from huggingface
   # or a dataset from local
-  dataset_name: 'lambdalabs/pokemon-blip-captions'
+  dataset_name: '../dataset/fengpig-blip'
   image_column: 'image'
   caption_column: 'text'
   max_train_samples: 10000 # for debugging purpose
-  center_crop: False # center crop the image to the resolution
+  center_crop: false # center crop the image to the resolution
   random_flip: True # randomly flip the image horizontally
-  resolution: [512, 512] # [width, height]
+  resolution: [512, 768] # [width, height]
 
   # train option
   seed: 321001525
-  batch_size: 1
-  num_train_epochs: 50
-  learning_rate: 0.0001
-  checkpoint_steps: 500 # Save a checkpoint of the training state every X updates. These checkpoints are only suitable for resuming training using `--resume_from_checkpoint`.
+  batch_size: 4
+  num_train_epochs: 250
+  learning_rate: 0.00001
+  checkpoint_steps: 1000 # Save a checkpoint of the training state every X updates. These checkpoints are only suitable for resuming training using `--resume_from_checkpoint`.
   resume_from_checkpoint: 'latest' #Resume from a previous checkpoint file located inside the output directory.
   gradient_accumulation_steps: 1
   mixed_precision: True # Use mixed precision training. Mixed precision training is only available for GPUs with compute capability >= 7.0.
@@ -31,7 +31,7 @@
   # max_grad_norm: 1.0 # "Max gradient norm."
   
   # validation option
-  validation_prompt: 'wedding, top quality, high resolution, masterpiece'
+  validation_prompt: 'a woman with a black hair tie on her head, top quality, high resolution, masterpiece, fengyizhou, 118-th-picture'
   validation_negative_prompt: 'bad, low quality, low resolution, ugly'
   num_validation_images: 4
   validation_epochs: 1
