--- a/task/pipeline/imageCaptionTagger.yml
+++ b/task/pipeline/imageCaptionTagger.yml
@@ -1,33 +1,39 @@
 - task: 'image_caption_tagger.v0'
   name: 'image_caption_tagger'
   
-  # # blip model config
-  # caption_config:
-  #   model:
-  #     checkpoint: 'Salesforce/blip2-opt-2.7b'
-  #   inference:
-  #     device: 'cuda'
-  #     batch_size: 20
-  #     trigger_world: 'fengyizhou'
-  
-  tagger_config:
+  # blip model config
+  caption:
     model:
-      checkpoint: 'SmilingWolf/wd-v1-4-convnext-tagger-v2'
-    inference:
-      device: 'cuda'
-      batch_size: 20
+      model_name: 'Salesforce/blip2-opt-2.7b'
+    device: 'cuda'
+    batch_size: 20
+    caption_column: 'caption'
+    image_column: 'image'
+  
+  tagger:
+    model:
+      model_name: 'SmilingWolf/wd-v1-4-convnext-tagger-v2'
+    device: 'cuda'
+    batch_size: 40
+    caption_column: 'tagger'
+    image_column: 'image'
+    filter_threshold: 0.5
+  
+  trigger_word: 'fengyizhou'
+  caption_column: 'text'
+  image_column: 'image'
   
   # input folder
   input:
-    input_folder: '../dataset/fengpig'
-    patterns:
-      - '*.JPG'
-      - '*.png'
-    recursive: True
+    folder:
+      image_folder: '../dataset/fengpig'
+      patterns:
+        - '*.JPG'
+        - '*.png'
+      recursive: True
   
   # output folder
   output:
-    output_folder: '../dataset/fengpig-blip' # if ignore, will use input_folder as output_folder
-    image_column: 'image'
-    caption_column: 'text'
-    output_as_image_folder: True # if True, will generate metadata.csv and images
+    folder:
+      image_folder: '../dataset/fengpig-blip' # if ignore, will use input_folder as output_folder
+      metadata_name: 'metadata.json'
