--- a/task/pipeline/txt2imgInference.yml
+++ b/task/pipeline/txt2imgInference.yml
@@ -8,10 +8,10 @@
     loras: # lora : weight
       - model:
           model_name: '/home/xiaoyuz/diffusers/task/pipeline/output/lora/lora.bin'
-        weight: 0.1
+        weight: 0.8
       - model:
           model_name: '/home/xiaoyuz/diffusers/task/pipeline/output/lora/lora-wedding.bin'
-        weight: 1
+        weight: 0.6
     
   # inference parameter
   step: 30
@@ -20,6 +20,8 @@
   seed: 321001525
   cfg: 7
   num_images_per_prompt: 10
+  strength: 0.6
+  image_column: 'image'
   sampler: 'dpm++ 2m karras' # ddim, dpm, dpm++ 2m karras, dpm++ 2m
 
   # input parameter
@@ -27,7 +29,7 @@
   input:
     prompt: 'fengyizhou,1girl,solo,black_hair, look_at_view,wedding_dress, full_body, short_hair_bun,black_eyes,realistic'
     negative_prompt: 'low quality, low resolution, blur, bad eyes, open_mouth' # toot mouth, protruding mouth, chubby face'
-
+    image: './output/0-6.png'
     # dataset:
     #   name: './blip'
     #   image_column: 'image'
